[MODIFY] EncryptDecryptTest downgrade to jdk 8